Fixed overlapping ship css rules

--- a/src/components/Setup/Setup.css
+++ b/src/components/Setup/Setup.css
@@ -30,19 +30,19 @@
   );
 }
 
-.Ship {
+.DnDShip {
   width: max-content;
   height: max-content;
   min-width: 3rem;
   min-height: 3rem;
 }
 
-.ShipPart {
+.DnDShip .ShipPart {
   width: 3rem;
   height: 3rem;
 }
 
-.ShipPart img {
+.DnDShip .ShipPart img {
   pointer-events: none;
   width: 100%;
   height: 100%;
